add query param support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     "noImplicitAny": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [ "dom", "dom.iterable", "esnext", "deno.ns" ],
-    "target": "esnext"
+    "experimentalDecorators": true
   }
 }
